# logging-decorator

./: .gitignore  README.md  pyproject.toml  ruff.toml
exceptions_mapper/: __init__.py  exceptions.py  map_err.py
logging_decorator/: __init__.py  config.py  decorator.py  exceptions.py  messages.py  pretty_repr.py  protocols.py  services.py
logging_decorator/logging_decorator/: config.py  decorator.py  pretty_repr.py  services.py
src/: __init__.py
src/exceptions_mapper/: exceptions.py  map_err.py
src/logging_decorator/: __init__.py  decorator.py  pretty_repr.py  services.py
tests/: conftest.py  services.py  test_async_decorator.py  test_exceptions_mapper.py  test_logging_decorator.py  test_sync_decorator.py
