[tool.poetry]
name = "logging-decorator"
version = "1.1.0"
description = ""
authors = ["Vitaliy.Mikhalchenko <vitalik.arshavin@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "src/py.typed"},
    {include = "src/logging_decorator"},
    {include = "src/exceptions_mapper"},
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
ruff = "^0.9.7"
mypy = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
