[project]
name = "logging-decorator"
version = "1.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.4.2,<8.0",
    "pytest-asyncio>=0.21.1,<0.22",
    "ruff>=0.9.7,<0.10",
    "mypy>=1.15.0,<2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "logging_decorator",
    "exceptions_mapper"
]
